--- a/style/input.css
+++ b/style/input.css
@@ -1,4 +1,3 @@
-@import "tailwindcss";
 
 @font-face {
   font-family: 'Preahvihear';
@@ -7,6 +6,19 @@
   font-style: normal;
 }
 
+* {
+   scroll-behavior: smooth; /* remove this if you have it */
+}
+
 .Preahvihear {
   font-family: Preahvihear, sans-serif;
 }
+
+.my-background {
+  background-image: url('/assets/pastel_gradient.webp');
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+}
+
+@import "tailwindcss";
