--- a/style/style.css
+++ b/style/style.css
@@ -141,25 +141,34 @@ body.my-background-dark .blob-4 {
     width: 350px;
     height: 350px;
     left: -10%;
+    top: 20%;
   }
   
   body.my-background-light .blob-2,
   body.my-background-dark .blob-2 {
     width: 320px;
     height: 320px;
+    top: 50%;
+    left: auto;
+    right: -10%;
+    transform: translateY(-50%);
   }
   
   body.my-background-light .blob-3,
   body.my-background-dark .blob-3 {
     width: 380px;
     height: 380px;
-    right: -12%;
+    right: auto;
+    left: -10%;
+    top: 70%;
   }
   
   body.my-background-light .blob-4,
   body.my-background-dark .blob-4 {
     width: 340px;
     height: 340px;
+    bottom: 5%;
+    display: none;
   }
 }
 
@@ -169,34 +178,40 @@ body.my-background-dark .blob-4 {
     filter: blur(40px);
   }
   
+  /* Blob 1 - Top left - 20% from top */
   body.my-background-light .blob-1,
   body.my-background-dark .blob-1 {
-    width: 250px;
-    height: 250px;
-    left: -15%;
-    top: 10%;
-  }
-  
-  body.my-background-light .blob-2,
-  body.my-background-dark .blob-2 {
     width: 220px;
     height: 220px;
-    top: -5%;
+    left: -15%;
+    top: 20%;
   }
   
+  /* Blob 2 - Center right - 50% from top */
+  body.my-background-light .blob-2,
+  body.my-background-dark .blob-2 {
+    width: 200px;
+    height: 200px;
+    top: 50%;
+    left: auto;
+    right: -15%;
+    transform: translateY(-50%);
+  }
+  
+  /* Blob 3 - Bottom left - 70% from top */
   body.my-background-light .blob-3,
   body.my-background-dark .blob-3 {
-    width: 280px;
-    height: 280px;
-    right: -15%;
-    top: 25%;
-  }
-  
-  body.my-background-light .blob-4,
-  body.my-background-dark .blob-4 {
     width: 240px;
     height: 240px;
-    bottom: -3%;
+    right: auto;
+    left: -15%;
+    top: 70%;
+  }
+  
+  /* Hide blob 4 on mobile */
+  body.my-background-light .blob-4,
+  body.my-background-dark .blob-4 {
+    display: none;
   }
 }
 
@@ -206,34 +221,40 @@ body.my-background-dark .blob-4 {
     filter: blur(35px);
   }
   
+  /* Blob 1 - Top left - 20% from top */
   body.my-background-light .blob-1,
   body.my-background-dark .blob-1 {
-    width: 180px;
-    height: 180px;
-    left: -20%;
-    top: 8%;
-  }
-  
-  body.my-background-light .blob-2,
-  body.my-background-dark .blob-2 {
     width: 160px;
     height: 160px;
-    top: -3%;
+    left: -20%;
+    top: 20%;
   }
   
+  /* Blob 2 - Center right - 50% from top */
+  body.my-background-light .blob-2,
+  body.my-background-dark .blob-2 {
+    width: 150px;
+    height: 150px;
+    top: 50%;
+    left: auto;
+    right: -20%;
+    transform: translateY(-50%);
+  }
+  
+  /* Blob 3 - Bottom left - 70% from top */
   body.my-background-light .blob-3,
   body.my-background-dark .blob-3 {
-    width: 200px;
-    height: 200px;
-    right: -20%;
-    top: 22%;
+    width: 180px;
+    height: 180px;
+    right: auto;
+    left: -20%;
+    top: 70%;
   }
   
+  /* Hide blob 4 on mobile */
   body.my-background-light .blob-4,
   body.my-background-dark .blob-4 {
-    width: 170px;
-    height: 170px;
-    bottom: -2%;
+    display: none;
   }
 }
 
