--- a/style/output.css
+++ b/style/output.css
@@ -623,8 +623,11 @@ video {
   margin-top: 2rem;
 }
 
-.mt-4 {
-  margin-top: 1rem;
+.line-clamp-4 {
+  overflow: hidden;
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  -webkit-line-clamp: 4;
 }
 
 .flex {
@@ -753,12 +756,6 @@ video {
        column-gap: 0.5rem;
 }
 
-.space-y-1 > :not([hidden]) ~ :not([hidden]) {
-  --tw-space-y-reverse: 0;
-  margin-top: calc(0.25rem * calc(1 - var(--tw-space-y-reverse)));
-  margin-bottom: calc(0.25rem * var(--tw-space-y-reverse));
-}
-
 .space-y-2 > :not([hidden]) ~ :not([hidden]) {
   --tw-space-y-reverse: 0;
   margin-top: calc(0.5rem * calc(1 - var(--tw-space-y-reverse)));
@@ -785,10 +782,6 @@ video {
 
 .overflow-hidden {
   overflow: hidden;
-}
-
-.overflow-y-auto {
-  overflow-y: auto;
 }
 
 .whitespace-nowrap {
@@ -829,9 +822,9 @@ video {
   border-color: rgb(239 68 68 / var(--tw-border-opacity, 1));
 }
 
-.border-slate-500 {
+.border-slate-700 {
   --tw-border-opacity: 1;
-  border-color: rgb(100 116 139 / var(--tw-border-opacity, 1));
+  border-color: rgb(51 65 85 / var(--tw-border-opacity, 1));
 }
 
 .border-white\/10 {
@@ -860,24 +853,14 @@ video {
   background-color: rgb(59 130 246 / var(--tw-bg-opacity, 1));
 }
 
-.bg-gray-800 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(31 41 55 / var(--tw-bg-opacity, 1));
-}
-
 .bg-red-500 {
   --tw-bg-opacity: 1;
   background-color: rgb(239 68 68 / var(--tw-bg-opacity, 1));
 }
 
-.bg-slate-500 {
+.bg-slate-700 {
   --tw-bg-opacity: 1;
-  background-color: rgb(100 116 139 / var(--tw-bg-opacity, 1));
-}
-
-.bg-slate-800 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(30 41 59 / var(--tw-bg-opacity, 1));
+  background-color: rgb(51 65 85 / var(--tw-bg-opacity, 1));
 }
 
 .bg-white\/15 {
@@ -886,11 +869,6 @@ video {
 
 .bg-white\/5 {
   background-color: rgb(255 255 255 / 0.05);
-}
-
-.bg-gray-500 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(107 114 128 / var(--tw-bg-opacity, 1));
 }
 
 .bg-gradient-to-br {
@@ -1002,14 +980,6 @@ video {
   padding-right: 0.5rem;
 }
 
-.pt-4 {
-  padding-top: 1rem;
-}
-
-.pt-6 {
-  padding-top: 1.5rem;
-}
-
 .pt-8 {
   padding-top: 2rem;
 }
@@ -1109,11 +1079,6 @@ video {
   color: rgb(156 163 175 / var(--tw-text-opacity, 1));
 }
 
-.text-gray-700 {
-  --tw-text-opacity: 1;
-  color: rgb(55 65 81 / var(--tw-text-opacity, 1));
-}
-
 .text-green-400 {
   --tw-text-opacity: 1;
   color: rgb(74 222 128 / var(--tw-text-opacity, 1));
@@ -1159,6 +1124,11 @@ video {
   color: rgb(239 68 68 / var(--tw-text-opacity, 1));
 }
 
+.text-slate-700 {
+  --tw-text-opacity: 1;
+  color: rgb(51 65 85 / var(--tw-text-opacity, 1));
+}
+
 .text-slate-900 {
   --tw-text-opacity: 1;
   color: rgb(15 23 42 / var(--tw-text-opacity, 1));
@@ -1174,21 +1144,6 @@ video {
   color: rgb(250 204 21 / var(--tw-text-opacity, 1));
 }
 
-.text-slate-500 {
-  --tw-text-opacity: 1;
-  color: rgb(100 116 139 / var(--tw-text-opacity, 1));
-}
-
-.text-slate-700 {
-  --tw-text-opacity: 1;
-  color: rgb(51 65 85 / var(--tw-text-opacity, 1));
-}
-
-.text-slate-800 {
-  --tw-text-opacity: 1;
-  color: rgb(30 41 59 / var(--tw-text-opacity, 1));
-}
-
 .shadow-\[4px_4px_0_0_theme\(\'colors\.white\'\)\2c 4px_4px_0_1px_theme\(\'colors\.blue\.500\'\)\] {
   --tw-shadow: 4px 4px 0 0 #fff,4px 4px 0 1px #3b82f6;
   --tw-shadow-colored: 4px 4px 0 0 var(--tw-shadow-color), 4px 4px 0 1px var(--tw-shadow-color);
@@ -1201,8 +1156,8 @@ video {
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
-.shadow-\[4px_4px_0_0_theme\(\'colors\.white\'\)\2c 4px_4px_0_1px_theme\(\'colors\.slate\.500\'\)\] {
-  --tw-shadow: 4px 4px 0 0 #fff,4px 4px 0 1px #64748b;
+.shadow-\[4px_4px_0_0_theme\(\'colors\.white\'\)\2c 4px_4px_0_1px_theme\(\'colors\.slate\.700\'\)\] {
+  --tw-shadow: 4px 4px 0 0 #fff,4px 4px 0 1px #334155;
   --tw-shadow-colored: 4px 4px 0 0 var(--tw-shadow-color), 4px 4px 0 1px var(--tw-shadow-color);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
@@ -1254,6 +1209,13 @@ video {
 
 .duration-300 {
   transition-duration: 300ms;
+}
+
+.line-clamp-4 {
+  overflow: hidden;
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  -webkit-line-clamp: 4;
 }
 
 .preahvihear-regular {
@@ -1373,6 +1335,224 @@ body.my-background-dark .blob-3 {
   right: -8%;
   opacity: 0.45;
   animation: float3 38s ease-in-out infinite;
+}
+
+/* Bottom center - Rich Amber */
+
+body.my-background-dark .blob-4 {
+  width: 420px;
+  height: 420px;
+  background: radial-gradient(circle, #FBBF24 0%, #F59E0B 40%, #D97706 70%, transparent 100%);
+  bottom: -5%;
+  left: 50%;
+  transform: translateX(-50%);
+  opacity: 0.4;
+  animation: float4 42s ease-in-out infinite;
+}
+
+/* MOBILE RESPONSIVE - Tablets and below */
+
+@media (max-width: 1024px) {
+  .gradient-blob {
+    filter: blur(50px);
+  }
+
+  body.my-background-light .blob-1,
+  body.my-background-dark .blob-1 {
+    width: 420px;
+    height: 420px;
+    left: -10%;
+    top: 20%;
+  }
+
+  body.my-background-light .blob-2,
+  body.my-background-dark .blob-2 {
+    width: 400px;
+    height: 400px;
+    top: 50%;
+    left: auto;
+    right: -10%;
+    transform: translateY(-50%);
+  }
+
+  body.my-background-light .blob-3,
+  body.my-background-dark .blob-3 {
+    width: 450px;
+    height: 450px;
+    right: auto;
+    left: -10%;
+    top: 70%;
+  }
+
+  body.my-background-light .blob-4,
+  body.my-background-dark .blob-4 {
+    width: 340px;
+    height: 340px;
+    bottom: 5%;
+    display: none;
+  }
+}
+
+/* MOBILE RESPONSIVE - Phones */
+
+@media (max-width: 640px) {
+  .gradient-blob {
+    filter: blur(40px);
+  }
+
+  /* Blob 1 - Top left - 20% from top */
+
+  body.my-background-light .blob-1,
+  body.my-background-dark .blob-1 {
+    width: 320px;
+    height: 320px;
+    left: -15%;
+    top: 20%;
+  }
+
+  /* Blob 2 - Center right - 50% from top */
+
+  body.my-background-light .blob-2,
+  body.my-background-dark .blob-2 {
+    width: 300px;
+    height: 300px;
+    top: 50%;
+    left: auto;
+    right: -15%;
+    transform: translateY(-50%);
+  }
+
+  /* Blob 3 - Bottom left - 70% from top */
+
+  body.my-background-light .blob-3,
+  body.my-background-dark .blob-3 {
+    width: 350px;
+    height: 350px;
+    right: auto;
+    left: -15%;
+    top: 70%;
+  }
+
+  /* Hide blob 4 on mobile */
+
+  body.my-background-light .blob-4,
+  body.my-background-dark .blob-4 {
+    display: none;
+  }
+}
+
+/* MOBILE RESPONSIVE - Small phones */
+
+@media (max-width: 380px) {
+  .gradient-blob {
+    filter: blur(35px);
+  }
+
+  /* Blob 1 - Top left - 20% from top */
+
+  body.my-background-light .blob-1,
+  body.my-background-dark .blob-1 {
+    width: 240px;
+    height: 240px;
+    left: -20%;
+    top: 20%;
+  }
+
+  /* Blob 2 - Center right - 50% from top */
+
+  body.my-background-light .blob-2,
+  body.my-background-dark .blob-2 {
+    width: 220px;
+    height: 220px;
+    top: 50%;
+    left: auto;
+    right: -20%;
+    transform: translateY(-50%);
+  }
+
+  /* Blob 3 - Bottom left - 70% from top */
+
+  body.my-background-light .blob-3,
+  body.my-background-dark .blob-3 {
+    width: 260px;
+    height: 260px;
+    right: auto;
+    left: -20%;
+    top: 70%;
+  }
+
+  /* Hide blob 4 on mobile */
+
+  body.my-background-light .blob-4,
+  body.my-background-dark .blob-4 {
+    display: none;
+  }
+}
+
+/* Animations - Slow, subtle, random movement */
+
+@keyframes float1 {
+  0%, 100% {
+    transform: translate(0, 0) scale(1);
+  }
+
+  25% {
+    transform: translate(30px, -25px) scale(1.03);
+  }
+
+  50% {
+    transform: translate(-20px, 35px) scale(0.98);
+  }
+
+  75% {
+    transform: translate(25px, 15px) scale(1.02);
+  }
+}
+
+@keyframes float2 {
+  0%, 100% {
+    transform: translateX(-50%) translate(0, 0) scale(1);
+  }
+
+  33% {
+    transform: translateX(-50%) translate(-25px, 20px) scale(1.04);
+  }
+
+  66% {
+    transform: translateX(-50%) translate(30px, 25px) scale(0.97);
+  }
+}
+
+@keyframes float3 {
+  0%, 100% {
+    transform: translate(0, 0) scale(1);
+  }
+
+  30% {
+    transform: translate(-35px, 30px) scale(1.05);
+  }
+
+  60% {
+    transform: translate(20px, -20px) scale(0.96);
+  }
+}
+
+@keyframes float4 {
+  0%, 100% {
+    transform: translateX(-50%) translate(0, 0) scale(1);
+  }
+
+  25% {
+    transform: translateX(-50%) translate(28px, -18px) scale(1.03);
+  }
+
+  50% {
+    transform: translateX(-50%) translate(-22px, 12px) scale(0.98);
+  }
+
+  75% {
+    transform: translateX(-50%) translate(24px, 16px) scale(1.04);
+  }
 }
 
 /* Bottom center - Rich Amber */
@@ -1706,18 +1886,13 @@ html {
   border-color: rgb(250 204 21 / 0.5);
 }
 
-.hover\:bg-gray-500:hover {
+.hover\:bg-gray-800:hover {
   --tw-bg-opacity: 1;
-  background-color: rgb(107 114 128 / var(--tw-bg-opacity, 1));
+  background-color: rgb(31 41 55 / var(--tw-bg-opacity, 1));
 }
 
 .hover\:bg-white\/10:hover {
   background-color: rgb(255 255 255 / 0.1);
-}
-
-.hover\:bg-gray-800:hover {
-  --tw-bg-opacity: 1;
-  background-color: rgb(31 41 55 / var(--tw-bg-opacity, 1));
 }
 
 .hover\:shadow-lg:hover {
@@ -1843,10 +2018,6 @@ html {
 
   .md\:grid {
     display: grid;
-  }
-
-  .md\:h-28 {
-    height: 7rem;
   }
 
   .md\:h-60 {
@@ -1981,10 +2152,6 @@ html {
     margin-top: 0px;
   }
 
-  .lg\:h-32 {
-    height: 8rem;
-  }
-
   .lg\:px-44 {
     padding-left: 11rem;
     padding-right: 11rem;
@@ -2013,10 +2180,6 @@ html {
 
   .mbl\:h-\[1px\] {
     height: 1px;
-  }
-
-  .mbl\:max-h-48 {
-    max-height: 12rem;
   }
 
   .mbl\:w-4 {
